 * AI:
   * Fixed incorrect handling of poisoning attacks when suggesting best attack 
     in user interface
   * Fixed bug #13295: made enemy_units formula return only those units which
     are not incapacitated (for example, it now ignores stoned units )
 * Editor2:
   * New feature: exporting of selection coordinates to system clipboard
 * Engine Changes
   * better detection of images fiting in a hex, should heavily reduce CPU
   usage
 * Graphics:
   * New portrait for Orc Grunt, Dwarf Fighter (alternative), Goblin Spearman,
     Ogre/Young Ogre, Trapper, Ranger, Huntsman.
   * Added two new snow mountain variants
 * Language and i18n:
   * new translations: Icelandic
   * updated translations: British English, Catalan, Chinese (Simplified),
      Czech, Dutch, German, Finnish, Hebrew, Hungarian, Indonesian, Italian,
      Lithuanian, Norwegian, Polish, Russian, Serbian, Slovak, Swedish, Turkish
 * Multiplayer
   * Fixed missing faction column and misplaced player's name column
     (but faction column is still missing if the host uses 1.6.0)
 * Multiplayer server:
   * Implemented automatic saving of game replays.
   * Implemented the adminmsg command to allow players to send messages to
     currently available admins (FR #9218)
 * Miscellaneous and bugfixes:
   * Fixed an infinite loop issue when no music tracks could be loaded
   * Fixed compilation with -D_GLIBCXX_PARALLEL
   * Fixed handling of floating-point WML constants on localized Windows
     (impacts "submerge" animations and AI settings)
   * Fixed a bug with auto-stored WML variables not being restored correctly
   * Fixed a crash when sighted event killed the attacked unit
   * Fixed control transfer after player leaves MP game (bug #13238)
   * Limit the maximum length of the mp command dialog as workaround for bug
     #13333 (This workaround is only implemented for Windows and Mac)

Version 1.6a:
 * User interface:
   * Remove a no longer valid assert (bug #13217)