@@ -14,6 +14,13 @@ Version 1.6.1:
      are not incapacitated (for example, it now ignores stoned units )
  * Editor2:
    * New feature: exporting of selection coordinates to system clipboard
+   * Made "wesnoth -e FILE" work like "wesnoth -e --load FILE" (load the map)
+   * Made "wesnoth -e --load DIR" (and consequently "wesnoth -e DIR") set
+     DIR as the default map directory for the current session, and start with 
+     the map load dialog open
+   * Added ability to load maps referenced in scenario files
+   * Added ability to work with maps embedded in scenario files (saving works 
+     in a limited scope)   
  * Engine Changes
    * better detection of images fiting in a hex, should heavily reduce CPU
    usage
